fixed checkbox size on mobile

--- a/style.css
+++ b/style.css
@@ -121,8 +121,8 @@ body {
 
 .dropdown-menu label input[type="checkbox"] {
   position: relative;
-  width: 20px;
-  height: 20px;
+  min-width: 20px;
+  min-height: 20px;
   border: 1px solid rgba(0, 0, 0, 1);
   border-radius: 6px;
   -webkit-appearance: none;
